# uv-mwe1

./: pyproject.toml
