[project]
name = "uv-mwe1"
description = "Minimum Working Example of unexpected behavior"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uv-mwe-mypackage1",
    "uv-mwe-mypackage2",
]
dynamic = ["version"]

[tool.uv.sources]
uv-mwe-mypackage1 = { git = "https://github.com/PepijnB/uv_mwe_mypackage1.git" }
uv-mwe-mypackage2 = { git = "https://github.com/PepijnB/uv_mwe_mypackage2.git", tag = "v0.1.2" }

[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "vcs"